--- a/themes/hipro_mobile/Portal/server.html
+++ b/themes/hipro_mobile/Portal/server.html
@@ -12,10 +12,10 @@
 		.s-header .h{display:block;width: 1.5rem;height: 1.5rem;text-align: center;line-height: 1.5rem;font-size: 20px;font-weight: bold;background-color: #000;border-radius:1.5rem;margin: 10px auto;color:#ffffff;}
 		.s-header span{line-height: 30px;font-size: 16px;font-weight: bold;}
 		.main-box h1{font-size: 20px;text-align: center;line-height: 50px;font-weight: bold; letter-spacing:5px;}
-		.plist h3{font-family: myFirstFont;font-size: 14px;line-height: 30px;color: #666666;font-weight: 500;margin:20px auto;text-align: center;}
+		.plist h3{font-family: fzlthft;font-size: 14px;line-height: 30px;color: #666666;font-weight: 500;margin:20px auto;text-align: center;}
 		.ul-list{display:flex;}
 		.ul-list ul{flex:1;margin-left: 20px;}
-		.ul-list ul li{font-family: myFirstFont;font-size: 14px;line-height: 30px;color: #666666;font-weight: 500;}
+		.ul-list ul li{font-family: fzlthft;font-size: 14px;line-height: 30px;color: #666666;font-weight: 500;}
 		.ul-list ul li i{margin-right: 5px;width:20px;margin-top: 5px;height: 20px;display:inline-block;vertical-align: top;line-height: 20px;text-align: center;border-radius:14px;text-align: center;border: 1px solid #666666;font-style: normal;font-size: 10px;}
         </style>
 	</head>
