--- a/themes/hipro_mobile/Comment/index.html
+++ b/themes/hipro_mobile/Comment/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>{$site_name}</title>
-<meta name="keywords" content="{$site_seo_keywords}" />
-<meta name="description" content="{$site_seo_description}">
-<meta name="author" content="ThinkCMF">
-<tc_include file="Public:head" />
+	<title>{$site_name}</title>
+	<meta name="keywords" content="{$site_seo_keywords}" />
+	<meta name="description" content="{$site_seo_description}">
+	<meta name="author" content="ThinkCMF">
+	<tc_include file="Public:head" />
 </head>
 
 <body class="body-white" id="top">
@@ -34,21 +35,23 @@
 								</thead>
 								<tbody>
 									<foreach name="comments" item="vo">
-									<tr>
-										<td>{$vo.id}</td>
-										<td>{$vo.content}</td>
-										<td>{$vo.createtime}</td>
-										<td>
-											<a href="__ROOT__/{$vo.url}#comment{$vo.id}">查看原文</a>
-											<!-- | <a class="js-ajax-dialog-btn" href="{:U('user/favorite/delete_favorite',array('id'=>$vo['id']))}" data-msg="您确定要取消收藏吗？" data-ok="" data-cacel="取消">取消收藏</a> -->
-										</td>
-									</tr>
+										<tr>
+											<td>{$vo.id}</td>
+											<td>{$vo.content}</td>
+											<td>{$vo.createtime}</td>
+											<td>
+												<a href="__ROOT__/{$vo.url}#comment{$vo.id}">查看原文</a>
+												<!-- | <a class="js-ajax-dialog-btn" href="{:U('user/favorite/delete_favorite',array('id'=>$vo['id']))}" data-msg="您确定要取消收藏吗？" data-ok="" data-cacel="取消">取消收藏</a> -->
+											</td>
+										</tr>
 									</foreach>
 								</tbody>
 							</table>
 						</div>
 
-						<div class="pagination"><ul>{$page}</ul></div>
+						<div class="pagination">
+							<ul>{$page}</ul>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -61,4 +64,5 @@
 
 	<tc_include file="Public:scripts" />
 </body>
+
 </html>
