--- a/themes/hipro_mobile/Public/footer.html
+++ b/themes/hipro_mobile/Public/footer.html
@@ -9,17 +9,12 @@
       </ul>
     </nav>-->
     <php>
-    $menu_root_ul_id="foot_nav";
-    $filetpl="<a href='\$href' target='\$target'>\$label</a>";
-    $foldertpl="<a class='dropdown-toggle' href='\$href' target='\$target'>\$label</a>";
-    $ul_class="dropdown-menu";
-    $li_class="" ;
-    $menu_root_ul_class="";
-    $showlevel=1;
-    $dropdown='dropdown';
-	</php>
-	<nav>
-	{:sp_get_menu(2,$menu_root_ul_id,$filetpl,$foldertpl,$ul_class,$li_class,$menu_root_ul_class,$showlevel,$dropdown)}
+      $menu_root_ul_id="foot_nav"; $filetpl="
+      <a href='\$href' target='\$target'>\$label</a>"; $foldertpl="
+      <a class='dropdown-toggle' href='\$href' target='\$target'>\$label</a>"; $ul_class="dropdown-menu"; $li_class="" ; $menu_root_ul_class=""; $showlevel=1; $dropdown='dropdown';
+    </php>
+    <nav>
+      {:sp_get_menu(2,$menu_root_ul_id,$filetpl,$foldertpl,$ul_class,$li_class,$menu_root_ul_class,$showlevel,$dropdown)}
     </nav>
     <div class="contact">
       <p>关注我们</p>
