--- a/themes/hipro_mobile/Public/head.html
+++ b/themes/hipro_mobile/Public/head.html
@@ -1,23 +1,24 @@
-	<tc_include file=":function"/>
-	<tc_include file=":config"/>
+<tc_include file=":function" />
+<tc_include file=":config" />
 <meta name="author" content="hujianying(604749526@qq.com)">
-	<meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <!-- Set render engine for 360 browser -->
-    <meta name="renderer" content="webkit">
-   	<!-- No Baidu Siteapp-->
-    <meta http-equiv="Cache-Control" content="no-siteapp"/>
-		<meta content="yes" name="apple-mobile-web-app-capable" />
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<!-- Set render engine for 360 browser -->
+<meta name="renderer" content="webkit">
+<!-- No Baidu Siteapp-->
+<meta http-equiv="Cache-Control" content="no-siteapp" />
+<meta content="yes" name="apple-mobile-web-app-capable" />
 <meta content="black" name="apple-mobile-web-app-status-bar-style" />
 <meta content="telephone=no" name="format-detection" />
 
-    <!-- HTML5 shim for IE8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <![endif]-->
-	<link rel="icon" href="__TMPL__Public/assets/images/favicon.ico" type="image/x-icon">
-	<link rel="shortcut icon" href="__TMPL__Public/assets/images/favicon.ico" type="image/x-icon">
-	<link href="__TMPL__Public/assets/css/bootstrap.css" rel="stylesheet">
-  <link href="__TMPL__Public/assets/css/base.css" rel="stylesheet">
-	<link href="__TMPL__Public/assets/css/style.css" rel="stylesheet">
+<!-- HTML5 shim for IE8 support of HTML5 elements -->
+<!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+<![endif]-->
+<link rel="icon" href="__PUBLIC__/images/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="__PUBLIC__/images/favicon.ico" type="image/x-icon">
+<link href="__PUBLIC__/css/font.css" rel="stylesheet">
+<link href="__TMPL__Public/assets/css/bootstrap.css" rel="stylesheet">
+<link href="__TMPL__Public/assets/css/base.css" rel="stylesheet">
+<link href="__TMPL__Public/assets/css/style.css" rel="stylesheet">
