--- a/themes/hipro_mobile/Portal/map.html
+++ b/themes/hipro_mobile/Portal/map.html
@@ -12,7 +12,7 @@
 	</head>
 <body>
 <section class="wrapper">
-	<iframe src="https://map.baidu.com/mobile/webapp/place/linesearch/foo=bar/from=place&end=word%3D%25E9%2587%2591%25E8%25BE%25BE%25E8%25B7%25AF130%25E5%258F%25B7%26point%3D13277060.73%252C2987816.00&tab=line" class="iframecss"></iframe>
+	<iframe src="https://map.baidu.com/mobile/webapp/place/linesearch/foo=bar/from=place&end=word%3D%25E4%25B8%2596%25E8%258C%2582%25E5%259B%25BD%25E9%2599%2585%25E4%25B8%25AD%25E5%25BF%258356%25E5%25B1%25825602%26point%3D13281973.09%252C2989429.01&tab=line&universalLinkCbkTag=1" class="iframecss"></iframe>
 </section>
 
 <tc_include file="Public:scripts"/>
