--- a/admin/themes/simplebootx/Admin/Slide/add.html
+++ b/admin/themes/simplebootx/Admin/Slide/add.html
@@ -24,7 +24,7 @@
 						<tr>
 							<th>{:L('TITLE')}</th>
 							<td>
-								<input type="text" style="width: 400px;" name="slide_name" value="" placeholder="请输入幻灯片名称"/>
+								<input type="text" style="width: 400px;" name="slide_name" value="" placeholder="请输入图片名称"/>
 								<span class="form-required">*</span>
 							</td>
 						</tr>
@@ -37,7 +37,7 @@
 							<td><input type="text" name="slide_des" value="" style="width: 400px"></td>
 						</tr>
 						<tr>
-							<th>幻灯片内容</th>
+							<th>图片内容</th>
 							<td><textarea name="slide_content" style="width: 98%; height: 200px;"></textarea></td>
 						</tr>
 					</table>
